2008-02-27  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_set_view_filter):
	remember if the view needs to be updated.
	* libbalsa/mailbox.h: new member.

2008-02-27  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_changed): allow for
	default count (== -1).
	* libbalsa/mailbox_imap.c: (lbm_imap_check): get UNREAD count
	instead of RECENT.
	* src/balsa-mblist.c: (bmbl_sort_idle,
	balsa_mblist_mailbox_node_append): inhibit sorting while
	building the tree, to avoid quadratic cost; prepend to tree
	instead of appending, for the same reason.
	* src/balsa-mblist.h: new members for sorting.
	* src/mailbox-node.c: (add_local_mailbox): respect
	subscribe-for-new-mail setting.
	* src/sendmsg-window.c: (update_bsmsg_identity): hide reply-to
	widget if we showed it temporarily.

2008-02-24  Peter Bloomfield

	* src/balsa-index.c: (bndx_popup_position_func, bndx_do_popup):
	add a popup-position func.

2008-02-24  Peter Bloomfield

	* libbalsa/imap/imap-handle.c: (ir_fetch_seq): compile with
	gcc-4.3.
	* src/main.c: (balsa_handle_automation_options): ditto.

2008-02-22  Peter Bloomfield

	* src/filter-edit-callbacks.c: (fe_typesmenu_cb,
	condition_validate, clear_condition_widgets,
	fill_condition_widgets, build_type_notebook): do not offer regex
	filter.
	* src/save-restore.c: (view_by_url_prefix, save_view,
	config_view_remove): new public function to remove a
	mailbox-view.
	* src/save-restore.h: ditto.
	* src/mailbox-conf.c: (mailbox_conf_delete): remove filters and
	the view.

2008-02-18  Peter Bloomfield

	* libbalsa/filter-funcs.c: (libbalsa_condition_compare): check
	for equality.

2008-02-18  Peter Bloomfield

	* src/balsa-message.c: (bm_find_entry_changed_cb,
	bm_find_again): use GtkSourceIter's case-insensitive search
	capability, if available.

2008-02-17  Peter Bloomfield

	* libbalsa/filter-funcs.c: (libbalsa_condition_compare): allow
	NULL conditions.
	* libbalsa/mailbox.c: (libbalsa_mailbox_set_view_filter): update