@@ -1,3 +1,12 @@
+2008-03-02  Peter Bloomfield
+
+	* src/balsa-index.c: (bndx_instance_init): remember
+	selection-changed signal handler id.
+	(balsa_index_select_all): select all messages without previewing
+	any.
+	* src/balsa-index.h: new member and method.
+	* src/main-window.c: use balsa_index_select_all.
+
 2008-02-27  Peter Bloomfield
 
 	* libbalsa/mailbox.c: (libbalsa_mailbox_set_view_filter):
